--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "php": ">=5.4.0",
     "sunra/php-simple-html-dom-parser": "^1.5",
     "rmccue/requests": "^1.0",
-    "nesbot/carbon": "^1.0"
+    "nesbot/carbon": "^1.0",
+    "robmorgan/phinx": "^0.8.0"
   },
   "autoload" : {
     "psr-4" : {
